[gd_scene load_steps=8 format=3 uid="uid://ueskkkqk5qvb"]

[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="1_f8v88"]
[ext_resource type="Script" path="res://Script/PauseMenu.gd" id="2_mtivb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wvoxy"]
shader = ExtResource("1_f8v88")
shader_parameter/blur = 1.0
shader_parameter/brightness = 0.5

[sub_resource type="Animation" id="Animation_8b71h"]
resource_name = "Pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [0.0, 0.85]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [1.0, 0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xwinw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b83h0"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ad0wq"]
_data = {
"Pause": SubResource("Animation_8b71h"),
"RESET": SubResource("Animation_xwinw"),
"Unpause": SubResource("Animation_b83h0")
}

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_wvoxy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_mtivb")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Pause" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="pause_label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/Pause"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Pause"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/Pause"]
layout_mode = 2

[node name="MainPause" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/Pause"]
visible = false
layout_mode = 2

[node name="Continue" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/Pause/MainPause"]
layout_mode = 2
text = "Continue
"

[node name="Settings" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/Pause/MainPause"]
layout_mode = 2
text = "Settings"

[node name="Menu" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/Pause/MainPause"]
layout_mode = 2
text = "Go back to menu"

[node name="Settings" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/Pause"]
layout_mode = 2

[node name="Settings" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings"]
layout_mode = 2

[node name="Fps" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings/Settings"]
layout_mode = 2
min_value = 30.0
max_value = 300.0
value = 30.0
suffix = "FPS"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings/Settings"]
layout_mode = 2

[node name="MobileControl" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings/Settings"]
layout_mode = 2
theme_override_constants/separation = -8

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings/Settings/MobileControl"]
layout_mode = 2
text = "Mobile Controls"

[node name="MobileFinger" type="CheckBox" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings/Settings/MobileControl"]
layout_mode = 2
text = "Finger"

[node name="MobileCursor" type="CheckBox" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings/Settings/MobileControl"]
layout_mode = 2
text = "Cursor"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings"]
layout_mode = 2

[node name="Exit" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings"]
layout_mode = 2

[node name="ExitAndSaveSettings" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings/Exit"]
layout_mode = 2
text = "Save"

[node name="ExitSettings" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/Pause/Settings/Exit"]
layout_mode = 2
text = "Cancel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Unpause"
libraries = {
"": SubResource("AnimationLibrary_ad0wq")
}
